Tests/test_output/Inference/Permutation/test_spintest.txt
WARNING: package sun.awt.X11 not in java.desktop
WARNING: package sun.awt.X11 not in java.desktop

ERROR: Unrecognized function or variable 'X'.

Error in test_spintest (line 14)
rho_store = spintest( X, Y, srf_sphere, 1000, 1 );
                      ^
Error in run (line 112)
evalin('caller', strcat(scriptStem, ';'));
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

STATUS: FAIL
